[tool.poetry]
name = "randomproj"
version = "0.1.0"
description = ""
authors = ["tom Koren <tom.koren@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "1.0.60.dev2"
tensorflow-io-gcs-filesystem = [{ version = "0.30.0", markers = "sys_platform != 'darwin'" },
                                { version = "0.34.0", markers = "sys_platform == 'darwin'" }]
tensorflow = { version = "2.11.0", markers = "sys_platform != 'darwin'" }
code-loader-helpers = "^1.0.13"
tensorflow-macos = { version = "2.11.0", markers = "sys_platform == 'darwin'" }
torch = "1.12.1"


[tool.poetry.group.dev.dependencies]
onnxruntime = "^1.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_custom_test: check_custom_test"
